samples/_failures_safe/1761225375_6d4378_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24270e54.c: In function ‘main’:
./samples/SAFE/__tmp_24270e54.c:150:20: error: missing terminating " character
  150 |             printf("%s: %d
      |                    ^~~~~~~
./samples/SAFE/__tmp_24270e54.c:150:13: error: expected expression at end of input
  150 |             printf("%s: %d
      |             ^~~~~~
./samples/SAFE/__tmp_24270e54.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24270e54.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24270e54.c:150:13: error: expected declaration or statement at end of input
